  the GPS sensor but must be set at the environment level.
- Introduce the new high-level sensor Attitude, allowing to compute the
  attitude of the system
- Introduce the sensor Magnetometer which allows to compute the magnetic field
  vector of the Earth.
- Extend the sensor IMU to return also the magnetic field vector.

Modifiers
++++++++

- Introduce ECEF and Geodetic modifiers, allowing to convert coordinates from
  Blender world to ECEF-r or Geodetic coordinates (and vice-versa). It should
  improve interoperability with flight systems in general.
- Introduce Feet modifier, to convert imperial units to meter buts (and
  vice-versa)

Middlewares
-----------

General
+++++++

- Introduce a binding for the Mavlink protocol  easing the interoperability of
  Morse with a lot of free autopilots / architectures.

Builder API
-----------

API addition
++++++++++++

- It is now possible to import environment composed of multiples scenes. The
  user should select which is the "main_scene" when importing the environment.
  Moreover, a method "Environment.set_background_scene" has been added to configure the
  scene to use in background (#651).

Pymorse
-------

- Robots created in loop are handled smartly. They are still usable as
  previously, but it is also possible to access them using the list foos (if
  your robot name is foo) (#358).
- Streams are now created lazily, fixing control with large number of robots /
  sensors (#626).

What's new in MORSE 1.3?
========================

General
-------
- MORSE now installs by default support for almost all its supported
  middlewares (ROS, YARP, MOOS, HLA, and (partially) pocolibs). This should
  improve end-users' first experience with MORSE (it 'just works')
- new sandbox environment. Check `the doc for a screenshot <https://www.openrobots.org/morse/doc/latest/quickstart.html>`_.

Components
----------

Robots
++++++

Actuators
+++++++++

- Introduce the new actuator "arucomarker", allowing to