@@ -5,8 +5,78 @@ from morse.core import blenderapi
 
 class Collision(Sensor):
     """
-    Sensor to detect objects colliding with the current object,
-    with more settings than the Touch sensor
+    Sensor to detect objects colliding with the current object.
+
+    It allows to select which objects are sensed for collision by setting
+    the property ``only_objects_with_property`` (see the Examples section for
+    an example).
+
+    This sensor is a wrapper around Blender's own `Collision
+    <https://www.blender.org/manual/game_engine/logic/sensors/collision.html>`_
+    sensor.
+
+    .. example::
+
+        from morse.builder import *
+
+        # adds a default robot (the MORSE mascott!)
+        robot = Morsy()
+
+        # create and add a Collision sensor
+        collision = Collision()
+
+        # place it on the front side of the robot
+        collision.translate(0.43,0,0.3)
+
+        # only detect collision with objects which have the property 'Object'.
+        # see the documentation of `Passive Objects` for details:
+        # http://www.openrobots.org/morse/doc/latest/user/others/passive_objects.html
+        collision.properties(only_objects_with_property="Object")
+
+        robot.append(collision)
+        # for this example, we use the socket interface
+        collision.add_interface("socket")
+
+        # we also add a keyboard actuator to be able to move
+        # around our robot to test collisions
+        keyboard = Keyboard()
+        robot.append(keyboard)
+
+        # the 'sandbox' test environment offers plenty of objects to test
+        # collisions. These objects have all the property 'Object' already set.
+        env = Environment('sandbox')
+
+        # Copy this code to a script, and run it with `morse run <script>`!
+
+    .. example::
+
+        # This is a sample *client* code that uses pymorse to count the
+        # collisions. Copy this code to a different script, start it with
+        # `python3 <script>`, and move the robot in the simulator with the
+        # arrow keys: when you collide with an object, it is printed on the
+        # console.
+
+        import pymorse
+
+        nb_collisions = 0
+
+        def counter(data):
+            global nb_collisions
+
+            if data["collision"]:
+                nb_collisions += 1
+                print("Collision with %s! In total, %d collisions occured" % (data["objects"], nb_collisions))
+
+
+        with pymorse.Morse() as morse:
+
+            morse.robot.collision.subscribe(counter)
+
+            print("Press ctrl+C to stop")
+            while True:
+                morse.sleep(10)
+
+    :noautoexample:
     """
     _name = "Collision"
     _short_desc = "Detect objects colliding with the current object."
@@ -17,8 +87,8 @@ class Collision(Sensor):
     # These properties are not used directly in the logic, but are used
     # in the builder to create the radar properly.
     # These value cannot be changed dynamically in bge.
-    add_property('_collision_property', "", 'collision_property', 'string',
-                 'Only look for objects with this property, '
+    add_property('_collision_property', "", 'only_objects_with_property', 'string',
+                 'Only report collision with objects that have this property, '
                  'default "" (all objects)')
 
     def __init__(self, obj, parent=None):
@@ -37,7 +107,8 @@ class Collision(Sensor):
         """ Is currently in collision """
         controller  = blenderapi.controller()
         sensor = controller.sensors[-1]
+
         # see hitObjectList and hitObject for last collided object(s)
+        # http://www.blender.org/api/blender_python_api_2_76_release/bge.types.KX_TouchSensor.html
         self.local_data['collision'] = sensor.positive
         self.local_data['objects'] = ','.join([o.name for o in sensor.hitObjectList])
-        # logger.debug(self.local_data['objects'])
